--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -3,6 +3,7 @@
     grid-template-columns: 2fr 3fr;
     color: white;
     font-size: 14pt;
+    padding-right: 10px;
 }
 
 .dialog{
@@ -57,4 +58,28 @@
     margin: 10px;
 }
 
+.messages {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    width: 100%;
+    border: 1px solid white;
+    margin-top: 10px;
+    padding: 10px;
+}
 
+.messageItem:nth-child(odd) {
+    max-width: 75%;
+    background-color: cornflowerblue;
+    padding: 5px;
+    align-self: flex-start;
+    margin-bottom: 5px;
+}
+
+.messageItem:nth-child(even) {
+    max-width: 75%;
+    background-color: #ee98aa;
+    padding: 5px;
+    align-self: flex-end;
+    margin-bottom: 5px;
+}
