--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -97,6 +97,20 @@
     width: 30px;
 }
 
+
+.friendListPreview {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.friendListPreview p {
+    color: white;
+    font-size: 28pt;
+    text-align: center;
+    width:100%;
+    margin-top: 60px;
+    margin-bottom: 10px;
+}
 @media (max-width: 1200px) {
     .nav {
         grid-area: n;
@@ -116,18 +130,35 @@
         margin-left: 10px;
         margin-bottom: 10px;
     }
+
+    .friendListPreview {
+        padding-left: 5px;
+        color: white;
+        font-size: 18pt;
+        margin-top: 10px;
+        margin-left: 10px;
+        margin-bottom: 10px;
+    }
+    .friendListPreview p {
+        font-size: 18pt;
+        text-align: center;
+        width:100%;
+        margin: 0 0;
+    }
+    .friendListPreview p:hover{
+        color:black;
+        opacity: 0.4;
+
+    }
+    .friendListPreview p::before {
+        content: '';
+        float: left;
+        position: relative;
+        background-image: url('./../../img/friends_logo.png');
+        background-size: 30px 30px;
+        display: block;
+        height: 30px;
+        width: 30px;
+    }
 }
 
-.friendListPreview {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-.friendListPreview p {
-    color: white;
-    font-size: 28pt;
-    text-align: center;
-    width:100%;
-    margin-top: 60px;
-    margin-bottom: 10px;
-}
