--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -25,8 +25,6 @@
     color: white;
 }
 
-
-
 .nav a:hover{
     color:black;
     opacity: 0.4;
@@ -96,6 +94,18 @@
     height: 30px;
     width: 30px;
 }
+
+.item:nth-child(6) a::before {
+    content: '';
+    float: left;
+    position: relative;
+    background-image: url('./../../img/users_logo.png');
+    background-size: 30px 30px;
+    display:block;
+    height: 30px;
+    width: 30px;
+}
+
 
 
 .friendListPreview {
