--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,6 +1,34 @@
 .image {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
+}
+.userWrapper {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    font-size: 14px;
+    font-weight:900;
+    text-decoration: underline;
+    border-bottom: 1px solid #ff37e8;
+    padding: 10px;
 
+}
+.photoAndButton {
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+}
+.location {
+    justify-content: space-between;
+}
+.followButton {
+    height: 30px;
+    width: 90px;
+    background-color: #ff37e8;
+    border: none;
+    font-size: 12pt;
+    color: white;
+    font-weight: 600;
+    text-decoration: underline;
 }
