--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -32,3 +32,19 @@
     font-weight: 600;
     text-decoration: underline;
 }
+.selectedPage {
+    text-decoration: underline;
+    font-weight: bold;
+    cursor: pointer;
+}
+.selectedPage:hover{
+    cursor: pointer;
+}
+.spanContainer {
+    overflow: scroll;
+}
+span{
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
