--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,3 +1,7 @@
+.usersContainer {
+    position: relative;
+}
+
 .image {
     width: 70px;
     height: 70px;
@@ -47,4 +51,13 @@ span{
     margin-left: 5px;
     margin-right: 5px;
     cursor: pointer;
+}
+
+.preloader {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 43%;
+    left: 43%;
+    z-index:100;
 }
