--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ grid-template-areas:
 .app-content {
   grid-area: c;
   background-color: blueviolet;
+  overflow: auto;
 }
 @media (max-width: 1200px) {
   .app-wrapper {
