--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -106,12 +106,11 @@
     width: 30px;
 }
 
-
-
 .friendListPreview {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .friendListPreview p {
     color: white;
@@ -120,7 +119,16 @@
     width:100%;
     margin-top: 60px;
     margin-bottom: 10px;
+    flex-grow: 1;
 }
+
+.friendsPreviewConteiner {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
 @media (max-width: 1200px) {
     .nav {
         grid-area: n;
