доработал блокировку кнопки при отправке запроса

--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -36,6 +36,10 @@
     font-weight: 600;
     text-decoration: underline;
 }
+.followButton:disabled{
+    opacity: 0.5;
+}
+
 .selectedPage {
     text-decoration: underline;
     font-weight: bold;
